2010-09-08  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/CMakeLists.txt: Link gsad to libexslt.

	* src/gsad_base.c (xsl_transform): Register exslt extensions.

	* src/html/omp.xsl (wrap): Replace with line-tokenizing version which
	calls line-wrap.
	(line-wrap): New template.  Copy of old wrap.

2010-09-08  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_base.c (xsl_transform): Return NULL on error instead of HTML.
	(gsad_message): Return basic HTML if transformation fails.

	* src/gsad_oap.c (xsl_transform_oap): Try return error dialog page before
	basic message, on transformation failure.

	* src/gsad_omp.c (xsl_transform_omp): Try return error dialog page before
	basic message, on transformation failure.

2010-09-08  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt: Added check for subversion directory if build type
	is not release to avoid an incomplete version number.

2010-09-07  Matthew Mundell <matthew.mundell@greenbone.net>

	Add associating of slave with task.

	* src/gsad.c (gsad_connection_info, free_resources, serve_post): Add
	slave_id attribute.
	(exec_omp_post): Pass slave_id to create_task_omp.

	* src/gsad_omp.c (create_task_omp): Add slave_id param.  Pass to
	CREATE_TASK.

	* src/gsad_omp.h: Update header accordingly.

	* src/html/omp.xsl (new_task): Add slave input.

2010-09-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/help.xsl (configure_credentials.html): Added
	note on Umlauts and Domain Controller.

2010-08-25  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (report_format): Add trust time under trust.
	(report_format [details]): Extract text part of trust only.

2010-08-25  Matthew Mundell <matthew.mundell@greenbone.net>

	Add verify buttons on the report formats page.

	* src/html/omp.xsl (report_format): Add verify button.

	* src/gsad_omp.c (verify_report_format_omp): New function.

	* src/gsad_omp.h: Add header accordingly.
