@@ -2564,6 +2564,26 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
               </table>
             </td>
           </tr>
+          <tr class="odd">
+            <td valign="top" width="125"></td>
+            <td colspan="2">
+              <table border="0" width="100%">
+                <tr>
+                  <td colspan="3" valign="top">
+                    <input type="radio" name="method" value="HTTP Get"/>
+                    HTTP Get
+                  </td>
+                </tr>
+                <tr>
+                  <td width="45"></td>
+                  <td width="100">URL</td>
+                  <td>
+                    <input type="text" name="method_data:URL" size="30" maxlength="301"/>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
           <tr class="even">
             <td colspan="2" style="text-align:right;">
               <input type="submit" name="submit" value="Create Escalator"/>
@@ -2826,6 +2846,19 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
                         <xsl:otherwise>
                           Simple notice
                         </xsl:otherwise>
+                      </xsl:choose>
+                    </td>
+                  </tr>
+                </xsl:when>
+                <xsl:when test="method/text()='HTTP Get'">
+                  <tr>
+                    <td width="45"></td>
+                    <td>URL:</td>
+                    <td>
+                      <xsl:choose>
+                        <xsl:when test="string-length(method/data[name='URL']/text()) &gt; 0">
+                          <xsl:value-of select="method/data[name='URL']/text()"/>
+                        </xsl:when>
                       </xsl:choose>
                     </td>
                   </tr>
